--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "iatoolkit"
-version = "0.7.6"
+version = "0.7.7"
 requires-python = ">=3.11"
 description = "IAToolkit"
 readme = "readme.md"
@@ -19,7 +19,7 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
-include = ["iatoolkit*", "services*", "common*", "repositories*", "infra*", "views*"]
+include = ["iatoolkit*", "services*", "common*", "repositories*", "infra*", "views*", "templates*", "static/**/*"]
 
 [tool.setuptools.dynamic]
 dependencies = { file = ["requirements.txt"] }
