--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "iatoolkit"
-version = "0.7.9"
+version = "0.7.10"
 requires-python = ">=3.11"
 description = "IAToolkit"
 readme = "readme.md"
@@ -26,4 +26,4 @@ dependencies = { file = ["requirements.txt"] }
 
 [tool.setuptools.package-data]
 # 'src/system_prompts' relativo al paquete 'iatoolkit'
-iatoolkit = ["system_prompts/*.prompt", "templates/*.html", "static/**/*"]
+iatoolkit = ["system_prompts/*.prompt", "templates/**/*", "static/**/*"]
