--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ openai==1.79.0
 openpyxl==3.1.5
 pandas==2.3.1
 pgvector==0.3.6
-Pillow==12.0.0
+pillow==11.0.0
 psutil==7.0.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
